--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -2,8 +2,6 @@ steps:
 
 ###########################################################
 
-
-# Need a win
 - label: 'Tile_PE'
   command: mflowgen/test/test_module.sh --verbose Tile_PE --steps synthesis
   agents: { jobsize: "hours" }
@@ -11,12 +9,12 @@ steps:
 - wait: ~
   continue_on_failure: true
 
-- label: 'Tile_MemCore'
-  command: mflowgen/test/test_module.sh --verbose Tile_MemCore --steps synthesis
-  agents: { jobsize: "hours" }
-
-- wait: ~
-  continue_on_failure: true
+# - label: 'Tile_MemCore'
+#   command: mflowgen/test/test_module.sh --verbose Tile_MemCore --steps synthesis
+#   agents: { jobsize: "hours" }
+# 
+# - wait: ~
+#   continue_on_failure: true
 
 
 
