--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -3,13 +3,13 @@ steps:
 ###########################################################
 
 - label: 'Tile_PE'
-  command: mflowgen/test/test_module.sh full_chip tile_array Tile_PE --steps synopsys-dc-synthesis --debug
+  command: mflowgen/test/test_module.sh --verbose Tile_PE --steps synthesis
+#   command: mflowgen/test/test_module.sh full_chip tile_array Tile_PE --steps synopsys-dc-synthesis --debug
   agents: { jobsize: "hours" }
 
 - wait: ~
   continue_on_failure: true
 
-#   command: mflowgen/test/test_module.sh --verbose Tile_PE --steps synthesis
 
 
 
