--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -3,22 +3,20 @@ steps:
 ###########################################################
 
 - label: 'Tile_PE'
-#   command: mflowgen/test/test_module.sh --verbose Tile_PE --steps synthesis
+# command: mflowgen/test/test_module.sh --verbose Tile_PE --steps synthesis
   command: mflowgen/test/test_module.sh full_chip tile_array Tile_PE --steps synopsys-dc-synthesis --debug
   agents: { jobsize: "hours" }
 
 - wait: ~
   continue_on_failure: true
 
+- label: 'Tile_MemCore'
+# command: mflowgen/test/test_module.sh --verbose Tile_MemCore --steps synthesis
+  command: mflowgen/test/test_module.sh full_chip tile_array Tile_MemCore --steps synopsys-dc-synthesis --debug
+  agents: { jobsize: "hours" }
 
-
-
-# - label: 'Tile_MemCore'
-#   command: mflowgen/test/test_module.sh --verbose Tile_MemCore --steps synthesis
-#   agents: { jobsize: "hours" }
-# 
-# - wait: ~
-#   continue_on_failure: true
+- wait: ~
+  continue_on_failure: true
 
 
 
