--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -3,10 +3,13 @@ steps:
 
 - label: 'tile-array'
   commands:
-  - gold=fold; test=`pwd`/test/test_module.sh
+  - gold=/sim/buildkite-agent/gold; test=`pwd`/test/test_module.sh
   - $$test --debug full_chip tile_array --steps none
   - pwd
   - echo gold=$$gold
+  - cp -rp $$gold/full_chip/*tile_array/0-Tile_MemCore .
+  - cp -rp $$gold/full_chip/*tile_array/1-Tile_PE .
+
 
 
 
