--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -5,11 +5,12 @@ steps:
   commands:
   - gold=/sim/buildkite-agent/gold; test=`pwd`/mflowgen/test/test_module.sh
   - $$test --debug full_chip tile_array --steps none
+  - wdir=mflowgen/test/full_chip/14-tile_array
   - echo pwd=`pwd`
   - echo gold=$$gold
-  - cp -rp $$gold/full_chip/*tile_array/0-Tile_MemCore .
-  - cp -rp $$gold/full_chip/*tile_array/1-Tile_PE .
-  - make -n rtl | grep 'mkdir.*output' | sed 's/.output.*//'
+  - cp -rp $$gold/full_chip/*tile_array/0-Tile_MemCore $$wdir
+  - cp -rp $$gold/full_chip/*tile_array/1-Tile_PE $$wdir
+  - cd $$wdir; make -n rtl | grep 'mkdir.*output' | sed 's/.output.*//'
 
 
 
