--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -7,8 +7,7 @@ steps:
   - echo error foo > mflowgen-run.log
   - echo post-error info
   - if [ "$$FAIL" ]; then echo foo; fi
-  - echo a \
-  b
+  - echo a
 
 
 
