--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -7,12 +7,8 @@ steps:
   - echo error foo > mflowgen-run.log
   - echo post-error info
   - if [ "$$FAIL" ]; then echo foo; fi
-  - echo a
+  - echo a \
   b c
-  - if [ "x" ]; then
-      echo a
-    fi
-  
 
 
 
