--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -6,12 +6,12 @@ steps:
   - FAIL=true
   - echo error foo > mflowgen-run.log
   - echo post-error info
-  - if [ "$$FAIL" ]; then echo foo; fi
   >- echo a 
   b c
 
 
 
+#   - if [ "$$FAIL" ]; then echo foo; fi
 
 #   - if [ "$$FAIL" ]; then \
 #         echo '+++ FAIL'; \
