--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -6,8 +6,8 @@ steps:
   - FAIL=true
   - echo error foo > mflowgen-run.log
   - echo post-error info
-  - 'echo a b c
-d e '
+  - 'echo a b c'\
+'d e '
 
 
 
