--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -8,8 +8,9 @@ steps:
   - $$test --debug full_chip tile_array --steps none
   - echo pwd=`pwd`
 
-  - wdir=test/full_chip/14-tile_array
+  - wdir=mflowgen/test/full_chip/14-tile_array
   - echo wdir=$$wdir
+  - ls; ls mflowgen; ls mflowgen/test; ls mflowgen/test/full_chip; 
   - ls $$wdir
 
   - gold=/sim/buildkite-agent/gold
