--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -3,37 +3,43 @@ steps:
 
 - label: 'tile-array'
   commands:
-  - echo pwd=`pwd`
-  - test=`pwd`/mflowgen/test/test_module.sh
-  - $$test --debug full_chip tile_array --steps none
-  - echo pwd=`pwd`
+  - test=mflowgen/test/test_module.sh
+  - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
 
-  - cd mflowgen/test/full_chip/14-tile_array
 
-  - gold=/sim/buildkite-agent/gold
-  - echo gold=$$gold
 
-  - echo cp -rp $$gold/full_chip/*tile_array/0-Tile_MemCore .
-  - cp -rp $$gold/full_chip/*tile_array/0-Tile_MemCore .
-
-  - echo cp -rp $$gold/full_chip/*tile_array/1-Tile_PE .
-  - cp -rp $$gold/full_chip/*tile_array/1-Tile_PE .
-
-  - make -n rtl | grep 'mkdir.*output' | sed 's/.output.*//'
-
-  - make rtl |& tee make-rtl.log | awk -f $$test/rtl-filter1.awk || set FAIL
-  - 'if [ "$FAIL" ]; then echo "+++ FAIL";
-        echo "Looks like we failed, here are some errors maybe:";
-        echo grep -i error mflowgen-run.log;
-        grep -i error mflowgen-run.log; echo exit 13;
-    fi'
-  - make synopsys-dc-synthesis |& tee make-syn.log | awk -f $$test/post-rtl-filter1.awk || set FAIL
-  - 'if [ "$FAIL" ]; then echo "+++ FAIL";
-        echo "Looks like we failed, here are some errors maybe:";
-        echo grep -i error mflowgen-run.log;
-        grep -i error mflowgen-run.log; echo exit 13;
-    fi'
-  - make cadence-innovus-init  |& tee make-init.log || set FAIL
+#   - echo pwd=`pwd`
+#   - test=`pwd`/mflowgen/test/test_module.sh
+#   - $$test --debug full_chip tile_array --steps none
+# 
+#   - echo pwd=`pwd`
+# 
+#   - cd mflowgen/test/full_chip/14-tile_array
+# 
+#   - gold=/sim/buildkite-agent/gold
+#   - echo gold=$$gold
+# 
+#   - echo cp -rp $$gold/full_chip/*tile_array/0-Tile_MemCore .
+#   - cp -rp $$gold/full_chip/*tile_array/0-Tile_MemCore .
+# 
+#   - echo cp -rp $$gold/full_chip/*tile_array/1-Tile_PE .
+#   - cp -rp $$gold/full_chip/*tile_array/1-Tile_PE .
+# 
+#   - make -n rtl | grep 'mkdir.*output' | sed 's/.output.*//'
+# 
+#   - make rtl |& tee make-rtl.log | awk -f $$test/rtl-filter1.awk || set FAIL
+#   - 'if [ "$FAIL" ]; then echo "+++ FAIL";
+#         echo "Looks like we failed, here are some errors maybe:";
+#         echo grep -i error mflowgen-run.log;
+#         grep -i error mflowgen-run.log; echo exit 13;
+#     fi'
+#   - make synopsys-dc-synthesis |& tee make-syn.log | awk -f $$test/post-rtl-filter1.awk || set FAIL
+#   - 'if [ "$FAIL" ]; then echo "+++ FAIL";
+#         echo "Looks like we failed, here are some errors maybe:";
+#         echo grep -i error mflowgen-run.log;
+#         grep -i error mflowgen-run.log; echo exit 13;
+#     fi'
+#   - make cadence-innovus-init  |& tee make-init.log || set FAIL
 
 
 
