--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,5 +1,19 @@
 steps:
 
+- label: 'tile-array'
+  agents: { jobsize: "hours" }
+  commands:
+  - test=mflowgen/test/test_module.sh
+  - $$test --debug full_chip tile_array --steps copy,init
+  # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
+
+- wait: ~
+  continue_on_failure: true
+
+
+
+
+
 - label: 'Tile_MemCore'
   agents: { jobsize: "hours" }
   commands:
@@ -22,14 +36,6 @@ steps:
 
 
 
-- label: 'tile-array'
-  agents: { jobsize: "hours" }
-  commands:
-  - test=mflowgen/test/test_module.sh
-  - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
-
-- wait: ~
-  continue_on_failure: true
 
 
 
