trying a new thing

--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -5,7 +5,7 @@ steps:
   commands:
   - test="mflowgen/test/test_module.sh --debug"
   - cached=constraints,rtl,tsmc16,synthesis
-  = steps=init
+  - steps=init
   - $$test full_chip tile_array --use_cached $$cached --steps $$steps
   # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
 
