--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -4,7 +4,7 @@ steps:
   agents: { jobsize: "hours" }
   commands:
   - test="mflowgen/test/test_module.sh --debug"
-  - cached=constraints,rtl,tsmc16,synthesis
+  - cached=MemCore,PE,constraints,rtl,tsmc16,synthesis
   - steps=init
   - $$test full_chip tile_array --use_cached $$cached --steps $$steps
   # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
