--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -52,24 +52,24 @@ steps:
 
 
 
-# - label: 'MemCore synth'
-#   agents: { jobsize: "hours" }
-#   commands:
-#   - test=mflowgen/test/test_module.sh
-#   - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
-# 
-# - wait: ~
-#   continue_on_failure: true
-# 
-# 
-# - label: 'PE synth'
-#   agents: { jobsize: "hours" }
-#   commands:
-#   - test=mflowgen/test/test_module.sh
-#   - $$test full_chip tile_array Tile_PE --steps synthesis --debug
-# 
-# - wait: ~
-#   continue_on_failure: true
+- label: 'MemCore synth'
+  agents: { jobsize: "hours" }
+  commands:
+  - test=mflowgen/test/test_module.sh
+  - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
+
+- wait: ~
+  continue_on_failure: true
+
+
+- label: 'PE synth'
+  agents: { jobsize: "hours" }
+  commands:
+  - test=mflowgen/test/test_module.sh
+  - $$test full_chip tile_array Tile_PE --steps synthesis --debug
+
+- wait: ~
+  continue_on_failure: true
 
 
 
