--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,16 +1,10 @@
 steps:
 
 ########################################################################
-# Slow version builds rtl from scratch, takes 1.5 hours maybe
-- label: 'tile-array init no-cache'
+# Faster version uses cached rtl but does synthesis, takes an hour maybe
+- label: 'tile-array init no-cache 60m'
   agents: { jobsize: "hours" }
   commands:
-  - test="mflowgen/test/test_module.sh --debug"
-  - cached=MemCore,PE,constraints,rtl,tsmc16,synthesis
-  - steps=init
-  # - $$test full_chip tile_array --use_cached $$cached --steps $$steps
-  # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
-  # Try a thing
   - 'mflowgen/test/test_module.sh full_chip tile_array
        --debug
        --use_cached PE,MemCore,rtl
@@ -18,25 +12,39 @@ steps:
   - pwd
   - gold=/sim/buildkite-agent/gold.tmp
   - test -d $$gold || mkdir $$gold
-  - cp -rp . $gold
+  - cp -rpf . $gold
 
 - wait: ~
   continue_on_failure: true
 
 
+########################################################################
+# Fastest version uses cached synthesis results, takes ??
 # - label: 'tile-array init'
 #   agents: { jobsize: "hours" }
 #   commands:
-#   - test="mflowgen/test/test_module.sh --debug"
-#   - cached=MemCore,PE,constraints,rtl,tsmc16,synthesis
-#   - steps=init
-#   # - $$test full_chip tile_array --use_cached $$cached --steps $$steps
-#   # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
-#   # Try a thing
-#   - 'mflowgen/test/test_module.sh
+#   - 'mflowgen/test/test_module.sh full_chip tile_array
 #        --debug
 #        --use_cached MemCore,PE,constraints,rtl,tsmc16,synthesis
 #        --steps init'
+# 
+# - wait: ~
+#   continue_on_failure: true
+
+
+
+########################################################################
+# Slowest version builds rtl from scratch, takes 1.5h maybe
+# - label: 'tile-array init no-cache 60m'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - steps=init
+#   # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
+#   # Try a thing
+#   - 'mflowgen/test/test_module.sh full_chip tile_array
+#        --debug
+#        --use_cached MemCore,PE,constraints,rtl,tsmc16,synthesis
+#        --steps rtl,syn,init'
 # 
 # - wait: ~
 #   continue_on_failure: true
@@ -52,7 +60,7 @@ steps:
 
 
 
-- label: 'MemCore synth'
+- label: 'MemCore synth 17m'
   agents: { jobsize: "hours" }
   commands:
   - test=mflowgen/test/test_module.sh
@@ -62,7 +70,7 @@ steps:
   continue_on_failure: true
 
 
-- label: 'PE synth'
+- label: 'PE synth 23m'
   agents: { jobsize: "hours" }
   commands:
   - test=mflowgen/test/test_module.sh
@@ -135,3 +143,24 @@ steps:
 #   continue_on_failure: true
 # 
 ###########################################################
+
+
+########################################################################
+# OLD way using vars
+# - label: 'tile-array init no-cache 60m'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - test="mflowgen/test/test_module.sh --debug"
+#   - cached=MemCore,PE,constraints,rtl,tsmc16,synthesis
+#   - steps=init
+#   # - $$test full_chip tile_array --use_cached $$cached --steps $$steps
+#   # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
+#   # Try a thing
+#   - 'mflowgen/test/test_module.sh full_chip tile_array
+#        --debug
+#        --use_cached PE,MemCore,rtl
+#        --steps syn,init'
+#   - pwd
+#   - gold=/sim/buildkite-agent/gold.tmp
+#   - test -d $$gold || mkdir $$gold
+#   - cp -rp . $gold
