quick bash syntax test

--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,7 +1,11 @@
 steps:
 
 - label: quick test
-  command: 'echo foo.'$$' bar baz'
+  commands:
+  - 'echo foo.$$ bar baz || echo ""'
+  - 'echo foo.$$$$ bar baz || echo ""'
+  - 'echo foo.'$$$$' bar baz || echo ""'
+  - 'echo foo.'$$' bar baz || echo ""'
 
 
 # - label: 'full_chip 36h'
