problem with req check

--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,16 +1,16 @@
 steps:
 
-# To build the full chip, run everything from the beginning:
-#   (Note if you do it all at one go like this, it doesn't save anything
-#   til the very end, and then only if nothing failed along the way! :(
-# 
-- label: 'full_chip 36h'
-  agents: { jobsize: "hours" }
-  commands:
-  - 'mflowgen/test/test_module.sh full_chip
-       --debug
-       --update_cache /sim/buildkite-agent/gold.$$BUILDKITE_BUILD_NUMBER
-       --steps lvs'
+# # To build the full chip, run everything from the beginning:
+# #   (Note if you do it all at one go like this, it doesn't save anything
+# #   til the very end, and then only if nothing failed along the way! :(
+# # 
+# - label: 'full_chip 36h'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - 'mflowgen/test/test_module.sh full_chip
+#        --debug
+#        --update_cache /sim/buildkite-agent/gold.$$BUILDKITE_BUILD_NUMBER
+#        --steps lvs'
 
 
 
