add sdf back annotation to Tile_MemCore

--- a/mflowgen/Tile_MemCore/gen_testbench/configure.yml
+++ b/mflowgen/Tile_MemCore/gen_testbench/configure.yml
@@ -17,6 +17,8 @@ outputs:
   - array_rtl.v
   - DW_fp_add.v
   - DW_fp_mult.v
+  - design.args
+
 #-------------------------------------------------------------------------
 # Commands
 #-------------------------------------------------------------------------
